[package]
name = "tiny-botnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.3.0"
anyhow = "1.0.75"
mio = {version="0.8.10", features=["os-poll","net"]}
bitcode = "0.5.0"
rand = "0.8.5"
mac_address = "1.1.5"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[build-dependencies]
dotenv = "0.15.0"

[profile.release]
strip = true 
opt-level = "z"
lto = true
codegen-units = 1
